syntax = "proto3";

package user.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "proto/userpb;userpb";

service UserService {
  rpc GetUserDetail(google.protobuf.Empty) returns (UserDetailResponse);
  rpc UpdateUsername(UpdateUsernameRequest) returns (UpdateUsernameResponse);
}

// Request to get user details
message GetUserDetailRequest {
  string user_id = 1; // UUID of the user
}

// User detail response
message UserDetailResponse {
  string id = 1;
  string name = 2;
  string username = 3;
  string email = 4;
  string bio = 5;
  bool twofa_enabled = 6;
  bool is_verified = 7;
  google.protobuf.Timestamp email_verified_at = 8;
  string status = 9;
  google.protobuf.Timestamp last_login = 10;
  string role_id = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}

// Request to update username
message UpdateUsernameRequest {
  string user_id = 1; // UUID of the user
  string new_username = 2; // New username to set
}

// Response after updating username
message UpdateUsernameResponse {
  bool success = 1;
  string message = 2;
  string user_id = 3;
  string new_username = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// Error response (optional, for consistency)
message ErrorResponse {
  int32 code = 1;
  string message = 2;
  string error = 3;
}